--- a/MVVM_Simple_Book/MVVM_Simple_Book/MVVM_Simple_Book.csproj
+++ b/MVVM_Simple_Book/MVVM_Simple_Book/MVVM_Simple_Book.csproj
@@ -54,6 +54,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LambdaCommand.cs" />
+    <Compile Include="Model\TextEditWindowModel.cs" />
+    <Compile Include="ViewModel\TextEditWndowViewModel.cs" />
+    <Compile Include="View\TextEditWindow.xaml.cs">
+      <DependentUpon>TextEditWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,6 +75,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\TextEditWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
