Окончание урока, но не работает чтение данных при открытии файла

--- a/MVVM_Simple_Book/MVVM_Simple_Book/MVVM_Simple_Book.csproj
+++ b/MVVM_Simple_Book/MVVM_Simple_Book/MVVM_Simple_Book.csproj
@@ -56,6 +56,7 @@
     </ApplicationDefinition>
     <Compile Include="LambdaCommand.cs" />
     <Compile Include="Model\TextEditWindowModel.cs" />
+    <Compile Include="OpenDialog.cs" />
     <Compile Include="ViewModel\TextEditWndowViewModel.cs" />
     <Compile Include="View\TextEditWindow.xaml.cs">
       <DependentUpon>TextEditWindow.xaml</DependentUpon>
